# PlottingLibrary

./: CMakeLists.txt  README.md
cmake/: plotter-config.cmake.in
examples/: CMakeLists.txt
examples/LoadData/: CMakeLists.txt  main.cpp
examples/MultipleLinePlot/: CMakeLists.txt  main.cpp
examples/MultipleScatterPlot/: CMakeLists.txt  main.cpp
examples/SimpleWindow/: CMakeLists.txt  main.cpp
examples/SingleLinePlot/: CMakeLists.txt  main.cpp
examples/SingleScatterPlot/: CMakeLists.txt  main.cpp
include/: figure.h
include/Plotter/: Plotter.h  data.h  export.h  line.h  resource_manager.h  scatter.h  shader.h  texture.h  utils.h
resources/shaders/: line.fs  plot.vs  scatter.fs  scatter.vs  text.vs
src/: CMakeLists.txt  Plotter.cpp  data.cpp  figure.cpp  line.cpp  main.cpp  resource_manager.cpp  scatter.cpp  shader.cpp  stb_image.cpp  texture.cpp
